@@ -132,6 +132,7 @@ Not ideal indeed, but probably the best of what we can achieve.
 * {doc-base-url}/Array[Array]
 ** {doc-base-url}/Array/Second[#second]
 ** {doc-base-url}/Array/Third[#third]
+** {doc-base-url}/Array/Wrap[.wrap]
 * {doc-base-url}/Enumerable[Enumerable]
 ** {doc-base-url}/Enumerable/IndexBy[#index_by]
 ** {doc-base-url}/Enumerable/MapSend[#map_send]
